<resources>
    <string name="app_name">Sail Tales</string>
    <string name="welcome">Welcome to SailTales!</string>
    <string name="action_settings">Settings</string>
    <string name="no_records">No Records</string>
    <string name="add_trip">Add Trip</string>
    <string name="start_location">Start Location</string>
    <string name="trip_description">Trip Description</string>
    <string name="finish_location">Finish Location</string>
    <string name="addrecord">Add Record</string>
    <string name="description">Description of trip</string>
    <string name="TripDate">Trip Date</string>
    <string name="StartTime">Start Time</string>
    <string name="TotalTimeHM">Total Time HRS:MINS</string>
    <string name="DistanceNM">Distance NM: </string>
    <string name="ClickAnchor">Click on the Anchor to add a new Trip.</string>
    <string name="news">News</string>
    <string name="summary">Summary</string>
    <string name="TotalDistance">Total Distance: </string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="tripnumber">Trip Number: </string>
    <string name="StartLocation">Start Location: </string>
    <string name="test">test</string>
    <string name="Heading">Heading: 0.0</string>
    <string name="Compass">Compass</string>
    <string name="NautMiles">Nautical Miles: </string>
    <string name="Date1">Date:</string>
    <string name="avgDistance">AVG Distance NM: </string>
    <string name="txtview">TextView</string>
    <string name="tdate">Trip Date</string>
    <string name="stime">Start Time</string>
    <string name="ttrips">Total Trips:</string>
    <string name="modtripdetails">Modify Trip Details</string>
    <string name="stats">Statistics</string>
</resources>
