<?xml version="1.0" encoding="utf-8"?>
<!--Scrollview to handle horizontal orientation-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >



    <EditText
        android:id="@+id/slocadd_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="30"
        android:hint="@string/start_location" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/flocadd_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="30"
        android:hint="@string/finish_location" >
    </EditText>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <Button
            android:id="@+id/add_date"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="showDatePickerDialog"
            android:text="@string/TripDate" />

        <Button
            android:id="@+id/add_time"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="showTimePickerDialog"
            android:text="@string/StartTime" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/ttimeadd_edittext"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:inputType="time"
            android:ems="30"
            android:hint="@string/TotalTimeHM" >

        </EditText>

        <EditText
            android:id="@+id/dsnmadd_edittext"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:inputType="numberDecimal"
            android:ems="30"
            android:hint="@string/DistanceNM"
            >

        </EditText>

    </LinearLayout>

    <EditText
        android:id="@+id/descadd_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:hint="@string/trip_description"
        android:inputType="textMultiLine"
        android:gravity="bottom"
        >
    </EditText>

    <Button
        android:id="@+id/add_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_trip"
        android:background="@drawable/custom_button_green"
        />


</LinearLayout>

</ScrollView>

