<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <!--

        <item
        android:id="@+id/add_record"
        android:icon="@drawable/ic_action_anchor_4_xxl"
        android:orderInCategory="100"
        android:title="@string/add_trip"
        app:showAsAction="always"/>

    -->

    <item
        android:id="@+id/compass"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="70"
        android:title="@string/Compass"
        app:showAsAction="always"/>

    <item
        android:id="@+id/news"
        android:icon="@android:drawable/ic_menu_today"
        android:orderInCategory="80"
        android:title="@string/news"
        app:showAsAction="always"/>

    <item
        android:id="@+id/summary"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="90"
        android:title="@string/summary"
        app:showAsAction="always"/>
</menu>
