<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/slocadd_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="30"
        android:hint="@string/start_location" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/flocadd_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="30"
        android:hint="@string/finish_location" >
    </EditText>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/sdateadd_viewtext"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Date"
            android:layout_gravity="left"
            android:background="#bab8b5" />

        <Button
            android:id="@+id/add_date"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="showDatePickerDialog"
            android:text="Trip Date" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/stimeadd_viewtext"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Time"
            android:layout_gravity="left"
            android:onClick="setTime"
            android:background="#bab8b5"/>

        <Button
            android:id="@+id/add_time"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="showTimePickerDialog"
            android:text="Start Time" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/ttimeadd_edittext"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:ems="30"
            android:hint="Total Time HRS" >

        </EditText>

        <EditText
            android:id="@+id/dsnmadd_edittext"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:ems="30"
            android:hint="Distance NM" >

        </EditText>

    </LinearLayout>

    <EditText
        android:id="@+id/descadd_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="30"
        android:hint="@string/trip_description"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:gravity="bottom">
    </EditText>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mod_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Update" />

        <Button
            android:id="@+id/rm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete" />
    </LinearLayout>



</LinearLayout>